# skytether

./: README.md  pyproject.toml  setup.py
scripts/: bootstrap-build.bash  recompile-pyarrow.bash
src/cpp/: skytether.cpp
src/cpp/dataformats/: util.cpp
src/cpp/datamodel/: tabular.cpp
src/cpp/headers/: datamodel.hpp  datatypes.hpp  operators.hpp  skyhookfs.hpp  skykinetic.hpp  skytether.hpp  structures.hpp
src/cpp/processing/: dataformats.cpp  dataops.cpp  numops.cpp  operators.cpp  statops.cpp
src/cpp/storage/: skyhookfs.cpp  skykinetic.cpp
src/cpp/test/: normalize.cpp
src/cpp/toolbox/: diff-expr.cpp  exec-query.cpp  explain.cpp  parse-arrow.cpp  parse-query.cpp  sandbox.cpp  skysql.cpp  t-test.cpp  test_access.cpp
src/python/: .pylintrc
src/python/skytether/: __init__.py  dataformats.py  kctl.py  parsers.py  skyhook.py  skyteth_r.py  util.py  writers.py
src/python/skytether/cybindings/: cykinetic.pxd  cykinetic.pyx  scyhook.pyx  scytether.pxd  scytether.pyx
